<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/menu_me" />
        <item
            android:id="@+id/nav_myactions"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_mission" />
        <item
            android:id="@+id/nav_my_inventory"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/menu_my_inventory" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menu_events" />
    </group>
</menu>
