<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.planyourmurder.ui.controller.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.planyourmurder.ui.model.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_me"
        android:name="com.example.planyourmurder.ui.controller.MyCharacterFragment"
        android:label="@string/menu_me"
        tools:layout="@layout/fragment_mycharacter" />

    <fragment
        android:id="@+id/nav_myactions"
        android:name="com.example.planyourmurder.ui.controller.MyActionsFragment"
        android:label="@string/menu_mission"
        tools:layout="@layout/fragment_myactions" />

    <fragment
        android:id="@+id/nav_my_inventory"
        android:name="com.example.planyourmurder.ui.controller.MyInventoryFragment"
        android:label="@string/menu_my_inventory"
        tools:layout="@layout/fragment_my_inventory" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.planyourmurder.ui.controller.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_the_characters"
        android:name="com.example.planyourmurder.ui.controller.TheCharactersFragment"
        android:label="@string/menu_the_characters"
        tools:layout="@layout/fragment_the_characters" />
</navigation>